fix background-image issue on firefox

--- a/recipe app/style.css
+++ b/recipe app/style.css
@@ -301,8 +301,9 @@ header button:hover {
     }
 
     .mobile-container {
-        width: 100%;
         position: absolute;
         top: 0;
+        min-height: 100vh;
+        width: 100%;
     }
 }
